--- a/package.json
+++ b/package.json
@@ -11,22 +11,23 @@
   "license": "ISC",
   "dependencies": {
     "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.10.5",
+    "@babel/core": "^7.11.1",
     "@babel/node": "^7.10.5",
-    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-env": "^7.11.0",
     "@babel/register": "^7.10.5",
     "babel-core": "^7.0.0-bridge.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "concurrently": "^5.2.0",
+    "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "idempotent-babel-polyfill": "^7.4.4",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1",
-    "webpack": "^4.43.0",
+    "mysql2": "^2.1.0",
+    "sequelize": "^6.3.4",
+    "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
@@ -37,10 +38,10 @@
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "cross-env": "^7.0.2",
-    "eslint": "^7.4.0",
+    "eslint": "^7.7.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
-    "mocha": "^8.0.1",
+    "mocha": "^8.1.1",
     "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^15.1.0",
     "supertest": "^4.0.2"
